# kx-problemsolving-balazs

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build.gradle  docker-compose.yml  settings.gradle  start.cmd  start.sh
api/: gateway.yaml  storage.yaml
gateway/: .dockerignore  Dockerfile  build.gradle
gateway/src/main/python/gatewaysrv/: .gitignore  setup.cfg
gateway/src/main/python/gatewaysrv/gatewaysrv/: __main__.py
gateway/src/main/python/gatewaysrv/gwapi/: api.py  storagemng.py
storage/: Dockerfile  build.gradle
storage/src/main/python/storagesrv/: .gitignore  setup.cfg
storage/src/main/python/storagesrv/storageapi/: api.py
storage/src/main/python/storagesrv/storagesrv/: __main__.py
