[metadata]
name = storagesrv
version = 1.0.0
maintainer = Balazs Hamorszky
maintainer_email = balihb@gmail.com

[options]
install_requires =
    storage_server == 1.0.0
    connexion[swagger-ui] >= 2.13.0

packages = find:
include_package_data = True

[options.package_data]
* = openapi/openapi.yaml

[options.entry_points]
console_scripts =
    storagesrv = storagesrv.__main__:main
